--- a/Week4/OpenCL/makefile
+++ b/Week4/OpenCL/makefile
@@ -1,7 +1,8 @@
 CC = gcc
 CFLAGS = -Wall -Wextra
 LDFLAGS = -l OpenCL
-SOURCE = MatrixMultiplication_Task.c
+# SOURCE = MatrixMultiplication_Task.c
+SOURCE = Simple2D.c
 TARGET = exec
 
 $(TARGET): $(SOURCE)
