--- a/Week5/OpenCL/makefile
+++ b/Week5/OpenCL/makefile
@@ -3,6 +3,10 @@ CFLAG = -Wall -Wextra
 LDFLAG = -lOpenCL
 SOURCE_MATRIX = MatrixMultiplicationTiled
 SOURCE_SMBM = SharedMemoryBitmap
+SOURCE_WMB = WaveformsMemoryBitmap
+
+$(SOURCE_WMB): $(SOURCE_WMB).c
+	$(CC) $(CFLAG) $(SOURCE_WMB).c -o $(SOURCE_WMB) $(LDFLAG)
 
 $(SOURCE_SMBM): $(SOURCE_SMBM).c
 	$(CC) $(CFLAG) $(SOURCE_SMBM).c -o $(SOURCE_SMBM) $(LDFLAG)
@@ -10,9 +14,10 @@ $(SOURCE_SMBM): $(SOURCE_SMBM).c
 $(SOURCE_MATRIX): $(SOURCE_MATRIX).c
 	$(CC) $(CFLAG) $(SOURCE_MATRIX).c -o $(SOURCE_MATRIX) $(LDFLAG)
 
-run: $(SOURCE_MATRIX) $(SOURCE_SMBM)
+run: $(SOURCE_MATRIX) $(SOURCE_SMBM) $(SOURCE_WMB)
 	./$(SOURCE_MATRIX)
 	./$(SOURCE_SMBM)
+	./$(SOURCE_WMB)
 
 clean:
-	rm -f $(SOURCE_MATRIX) $(SOURCE_SMBM)
+	rm -f $(SOURCE_MATRIX) $(SOURCE_SMBM) $(SOURCE_WMB)
